fix(style): 네비게이션 sticky 속성 적용을 위한 overflow 속성 제거

--- a/Week1/Homework/styles/layout/navigation.css
+++ b/Week1/Homework/styles/layout/navigation.css
@@ -4,7 +4,6 @@
   display: flex;
   width: 100%;
   max-width: 100vw;
-  overflow-x: hidden;
   padding-top: 60px;
 }
 
